--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.menurestoran">
+            <!-- Menambahkan Permission Untuk Fetch Data -->
+            <!-- Required to fetch data from the internet. -->
+     <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="menurestoran"
         android:name="${applicationName}"
@@ -30,5 +33,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+           
+
     </application>
 </manifest>
