--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+   
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #Menambahkan http depedencies
+  http: ^1.0.0
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
+  flutterfire_ui: ^0.4.3+20
 
 dev_dependencies:
   flutter_test:
